# RedNoise

./: .clang-format  .gitignore  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
libs/sdw/: CanvasPoint.cpp  CanvasPoint.h  CanvasTriangle.cpp  CanvasTriangle.h  Colour.cpp  Colour.h  DrawingWindow.cpp  DrawingWindow.h  ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.cpp  RayTriangleIntersection.h  TextureMap.cpp  TextureMap.h  TexturePoint.cpp  TexturePoint.h  Utils.cpp
src/: RedNoise.cpp  main.rs
