[package]
name = "RedNoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
sdl2-sys = { version = "0.35.2", features = ["bundled"] }

[target.'cfg(not(windows))'.dependencies]
sdl2-sys = "0.35.2"

[build-dependencies]
cc = "1.0.83"
